--- a/testclickomart/pubspec.yaml
+++ b/testclickomart/pubspec.yaml
@@ -39,7 +39,11 @@ dependencies:
   get: ^4.6.5
   http: ^0.13.5
   scrollable_positioned_list: ^0.3.4
+  flutter_image_slideshow: ^0.1.2
+  carousel_slider: ^4.1.1
+  shimmer: ^2.0.0
 
+ 
 dev_dependencies:
   flutter_test:
     sdk: flutter
