--- a/testclickomart/pubspec.yaml
+++ b/testclickomart/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_image_slideshow: ^0.1.2
   carousel_slider: ^4.1.1
   shimmer: ^2.0.0
+  animated_notch_bottom_bar: ^0.0.1
 
  
 dev_dependencies:
