--- a/testclickomart/pubspec.yaml
+++ b/testclickomart/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   carousel_slider: ^4.1.1
   shimmer: ^2.0.0
   animated_notch_bottom_bar: ^0.0.1
+  flutter_svg: ^1.0.3  
+  url_launcher: ^6.0.9
+  syncfusion_flutter_datepicker: ^20.2.46
 
  
 dev_dependencies:
@@ -70,6 +73,19 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/load.png
+    - assets/images/logo.png
+
+    - assets/images/ss.svg  
+    - assets/images/ff.svg    
+    - assets/images/msg.svg
+    - assets/images/cart.svg
+    - assets/images/gift.svg
+    - assets/images/group.svg
+    - assets/images/magic.svg
+    - assets/images/wallet.svg  
+    - assets/images/profile.svg
+    - assets/images/address.svg 
+    - assets/images/notification.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
